kubernetes/apps/test-applications/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: LoadBalancer # External access (use NodePort if LoadBalancer isn't available)
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # Port exposed by the service
      targetPort: 80 # Port the NGINX container listens on
