kubernetes/apps/test-applications/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-site-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: https
    cert-manager.io/cluster-issuer: 70ld-ss-cert-issuer
spec:
  rules:
    - host: &host test.70ld.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

  tls:
    - hosts:
        - *host
      secretName: nginx-test-ss-cert
